--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ a{
 }
 ul{
     list-style-type: none;
+    text-decoration: none;
 }
 img{
     display: block;
@@ -61,7 +62,7 @@ img{
     line-height: 1.19;
     margin-right: 93px;
 }
-.logo-first{
+.header__logo{
     color: #000000;
 }
 
@@ -69,19 +70,18 @@ img{
     display: flex;
     align-items: center;
 }
-.site-list{
+.site-nav__list{
     display: flex;
     
 }
-.site-item:not(:last-child) {
+.site-nav__item:not(:last-child) {
     margin-right: 50px;
 }
-.site-nav .link{
+.site-nav__link{
     position: relative;
     color: #212121;
     font-weight: 500;
     letter-spacing: 0.02em;
-    text-decoration: none;
     display: inline-block;
     padding: 32px 0;
     transition-property: color;
@@ -89,17 +89,33 @@ img{
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.site-nav .link:hover,
-.site-nav .link:focus{
+.site-nav__link:hover,
+.site-nav__link:focus{
     color: var(--accent-color);
+}
+.site-nav__link--current:visited {
+    color: var(--accent-color);
+}
+
+.site-nav__link--current::after {
+    content: " ";
+    background-color: var(--accent-color);
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+
 }
 .info-nav{
     display: flex;  
 }
-.info-item:not(:last-child) {
+.info-nav__item:not(:last-child) {
     margin-right: 50px;
 }
-.info-link{
+.info-nav__link{
     color:var(--secondary-text-color);
     font-weight: 500;
     letter-spacing: 0.02em;
@@ -110,30 +126,11 @@ img{
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.info-link:hover,
-.info-link:focus {
+.info-nav__link:hover,
+.info-nav__link:focus {
     color:var(--accent-color);
 }
-.current:visited{
-    color: var(--accent-color);
-}
-.current::after{
-    content: " ";
-    background-color: var(--accent-color);
-    display: inline-block;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    position: absolute;
-    left:0;
-    bottom:-1px;
-
-}
-.icon-formail{
-    margin-right: 10px;
-    fill: currentColor;
-}
-.icon-phone{
+.info-nav__icon{
     margin-right: 10px;
     fill: currentColor;
 }
@@ -179,7 +176,7 @@ padding: 200px;
     padding: 10px 32px;
     margin-top: 30px;
     transition-property: background-color;
-    transition-duration: 250ms;
+    /* transition-duration: 250ms; */
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
@@ -591,7 +588,7 @@ margin-right: 30px;
     margin-left: 15px
 }
 
-.logo-last{
+.footer__logo{
     color:var(--c-white);
 }
 .address-nav{
