--- a/css/styles.css
+++ b/css/styles.css
@@ -143,18 +143,18 @@ img{
 /* Main content */
 /* Hero */
 .hero{
-background-color: #2F303A;
-background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bcg-main.jpeg);
-background-position: center center;
-background-repeat: no-repeat;
-background-size: cover;
-max-width: 1600px;
-margin: 0 auto;
+    background-color: #2F303A;
+    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bcg-main.jpeg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 .hero-block{
-padding: 200px;
+    padding: 200px;
 }
-.hero-title{
+.hero__title{
     color: var(--c-white);
     font-weight: 900;
     font-size: 44px;
@@ -167,25 +167,27 @@ padding: 200px;
     display: flex;
     justify-content: center;
 }
-.hero-button{
-    color:var(--c-white);
+.button{
+    color: var(--c-white);
     background-color: var(--accent-color);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     text-align: center;
     letter-spacing: 0.06em;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    border:none;
+    border: none;
+}
+.hero__button{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     padding: 10px 32px;
     margin-top: 30px;
     transition-property: background-color;
-    /* transition-duration: 250ms; */
+    transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-button:hover,
-.hero-button:focus {
+.hero__button:hover,
+.hero__button:focus {
     background-color: #188CE8;
 }
 /* Advantages */
