--- a/css/styles.css
+++ b/css/styles.css
@@ -231,23 +231,22 @@ img{
 }
 
 /* Doing */
-.doing-list{
+.doing__list{
     display: flex;
     margin-top: 50px;
 }
 
-.doing-item:not(:last-child){
+.doing__item:not(:last-child){
     margin-right: 30px;
 }
-.doing-item{
+.doing__item{
     position:relative;
 }
-.doing-text{
+.doing__text{
     position: absolute;
     left:0;
     bottom:0;
     z-index: 2;
-
     background:rgba(47, 48, 58, 0.8);
     color:var(--c-white);
     padding: 27px 10px;
