--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,7 @@ img{
 margin-right: 30px;
 
 }
-.team-mate{
+.team__mate{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -282,7 +282,7 @@ margin-right: 30px;
     margin-top: 30px;
 }
 
-.team-jobs{
+.team__jobs{
     color: var(--secondary-text-color);
     font-size: 16px;
     line-height: 1.18;
@@ -296,6 +296,8 @@ margin-right: 30px;
     align-items: center;
     justify-content: center;
     gap: 10px;
+}
+.team__socials{
     margin-top: 16px;
 }
 
@@ -306,11 +308,13 @@ margin-right: 30px;
     height: 44px;
     width: 44px;
     border-radius: 50%;
+}
+.socials__link--team{
     background-color: var(--c-white);
     fill:#afb1b8;
 }
-.socials__link:hover,
-.socials__link:focus{
+.socials__link--team:hover,
+.socials__link--team:focus{
     fill:var(--c-white);
     background-color: var(--accent-color);
     transition-duration: 250ms;
