--- a/css/styles.css
+++ b/css/styles.css
@@ -592,10 +592,10 @@ margin-right: 30px;
 .footer__logo--white{
     color:var(--c-white);
 }
-.address-nav{
+.footer-address{
     margin-top: 20px;
 }
-.address-nav .link{
+.footer-address .link{
     color: rgba(255, 255, 255, 0.6);
     line-height: 1.71;
     text-decoration: none;
@@ -605,16 +605,16 @@ margin-right: 30px;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-item:not(:last-child){
+.footer-address__item:not(:last-child){
     margin-bottom: 9px;
 }
 
-.address-nav .link:hover,
-.address-nav .link:focus{
+.footer-address.link:hover,
+.footer-address .link:focus{
     color: var(--accent-color);
 }
 
-.address-nav .link-address{
+.footer-address .link-address{
     color: var(--c-white);
 }
 .footer__second{
@@ -629,22 +629,22 @@ margin-right: 30px;
     text-transform: uppercase;
     margin-bottom: 20px;
 }
-.socials__link.footer-link{
+.socials__link--footer{
     background-color: rgba(255, 255, 255, 0.1);
     fill: var(--c-white);
 }
-.socials__link.footer-link:hover,
-.socials__link.footer-link:focus {
+.socials__link--footer:hover,
+.socials__link--footer:focus {
     fill: var(--c-white);
     background-color: var(--accent-color);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-subscribe{
+.footer-form__subscribe{
     display: flex;
     justify-content: space-between;
 }
-.email-subscribe{
+.footer-form__email{
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -655,25 +655,16 @@ margin-right: 30px;
     font-size: 16px;
     line-height: 1.25;
 }
-.email-subscribe::placeholder {
+.footer-form__email::placeholder {
     font-size: 16px;
     line-height: 1.25;
     display: flex;
     align-items: center;
     color: rgba(255, 255, 255, 0.6);
 }
-.btn-subscribe{
-    color:var(--c-white);
-    background-color: var(--accent-color);
+.footer-form__button{
     padding: 10px 28px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: center;
-    letter-spacing: 0.06em;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
     margin-left: 12px;
     width: 200px;
     display: flex;
