--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -13,9 +13,8 @@
     display: flex;
     flex-direction: column;
     margin-right: 70px;
-    margin-left: 15px
-    width: 231px;
-}
+    margin-left: 15px;
+    width: 231px;}
 
 .footer__logo--white {
     color: var(--c-white);
