--- a/css/styles.css
+++ b/css/styles.css
@@ -677,14 +677,14 @@ margin-right: 30px;
 .filter-block{
     margin-bottom: 50px;
 }
-.filter-buttons{
+.filter__buttons{
     display: flex;
     gap: 8px;
     justify-content: center;
 }
 
 
-.filter-button{
+.filter__button{
     color: var(--primary-text-color);
     background-color: #F5F4FA;
     font-weight: 500;
@@ -698,8 +698,8 @@ margin-right: 30px;
 
 }
 
-.filter-button:hover,
-.filter-button:focus{
+.filter__button:hover,
+.filter__button:focus{
     color: var(--c-white);
     background: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
